tests/agl/rejections/scope/break_in_lambda_param_default_in_loop.agl
var i: int = 0
do
  let f = fn(p: int = break) -> int => p
  i := i + 1
  if i >= 3 => break
done
